# knapsack-rust

./: Cargo.toml  README.md
data/: small.json
src/: goal.rs  item.rs  main.rs
